# discord-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/discord_mcp/: __init__.py  server.py
tests/: test_smoke.py
